[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Spritesheets/Overworld/OfficialNavi.tres" type="Texture" id=1]
[ext_resource path="res://Utilities/SpritesheetManager/CharacterSprite.gd" type="Script" id=2]

[node name="CharacterSprite" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="FrameAnimator" type="AnimationPlayer" parent="."]

[connection signal="animation_finished" from="FrameAnimator" to="." method="_on_FrameAnimator_animation_finished"]
